finish design of home and about sector

--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
               </div>
             </div>
 
+
             <div class="nav__buttons">
               <!-- Theme change button -->
               <i class="ri-moon-line change-theme" id="theme-button"></i>
@@ -88,12 +89,18 @@
               <div class="home__container container grid">
                 <div class="home__data grid">
                   <div class="home__data">
-                    <span class="hone__greeting">Hello, I'm</span>
+                    <span class="hone__greeting"><h3>Hello, I'm</h3></span>
                     <h1 class="home__name">Claire Lin</h1>
                     <h3 class="home__education">Full-Stack Developer <br>
                     Based in Germany</h3>
                   </div>
 
+                  <div class="home__buttons">
+                    <a download="" href="assets/pdf/Claire Lin-CV.pdf" class="button button--ghost">
+                      Download CV
+                    </a>
+                    <a href="#about" class="button">About me</a>
+                  </div>
                   <div class="home__blob grid">
                     <div class="home__perfil">
                       <img src="assets/img/profile.png" alt="home profile photo" class="home__img">
@@ -103,12 +110,6 @@
                     <img src="assets/img/shape-circle.svg" alt="" class="home__shape-circle"> -->
                   </div>
 
-                  <div class="home__buttons">
-                    <a download="" href="assets/pdf/Claire Lin-CV.pdf" class="button button--ghost">
-                      Download CV
-                    </a>
-                    <a href="#about" class="button">About me</a>
-                  </div>
 
                   <ul class="home__social">
                     <a href="https://www.linkedin.com/in/clairechlin/" target="_blank" class="home__social-link">
@@ -144,7 +145,8 @@
                 </div>
 
                 <p class="about__description">
-                  I am a Berlin-based junior full stack developer from Taiwan.
+                  <mark>hi there - let me introduce myself.</mark><br>
+                  <br>I am a Berlin-based junior full stack developer from Taiwan.
                   After four years of experience in art consulting company as a project
                   manager, then two years of experience in the blockchain industry as a
                   crypto-journalist, I decided to change my career to become a web
@@ -154,9 +156,9 @@
                   I like to see this as the first step of a much longer journey and I am
                   excited to learn new things and onboard new languages on my way. <br><br>
                   In my professional life, one thing became clear pretty quickly -
-                  I like to put great attention to detail, and I feel satisfied when the
+                  <strong>I like to put great attention to detail, and I feel satisfied when the
                   outcome meets my creativity with also more relationship-drive,
-                  human-centered design.
+                  human-centered design.</strong>
                   In my freetime, I enjoy traveling, cycling, surfing, dancing,
                   and occationally gardening.
                 </p>
