--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         <main class="main">
             <!--==================== NEW HOME ====================-->
             <section class="home section" id="home">
-              <div class="home__container container grid">
+              <div class="home__container container grid section__border">
                 <div class="home__data grid">
                   <div class="home__data">
                     <span class="hone__greeting"><h3>Hello, I'm</h3></span>
@@ -134,7 +134,7 @@
               <h2 class="section__title">About Me</h2>
               <spen class="section__subtitle">My Intro</spen>
 
-              <div class="about__container container grid">
+              <div class="about__container container grid section__border">
                 <img src="assets/img/about.png" alt="" class="about__img">
 
                 <div class="about__data">
@@ -156,9 +156,9 @@
                   I like to see this as the first step of a much longer journey and I am
                   excited to learn new things and onboard new languages on my way. <br><br>
                   In my professional life, one thing became clear pretty quickly -
-                  <strong>I like to put great attention to detail, and I feel satisfied when the
-                  outcome meets my creativity with also more relationship-drive,
-                  human-centered design.</strong>
+                  I like to <mark>put great attention to detail,</mark> and I feel <mark>satisfiedwhen the
+                  outcome meets my creativity</mark> with also more relationship-drive,
+                  human-centered design.
                   In my freetime, I enjoy traveling, cycling, surfing, dancing,
                   and occationally gardening.
                 </p>
