finish responsive design for medium devices

--- a/index.html
+++ b/index.html
@@ -39,6 +39,12 @@
                 </li>
 
                 <li class="nav__item">
+                  <a href="#about" class="nav__link">
+                    <i class="ri-book-open-line"></i> About
+                  </a>
+                </li>
+
+                <li class="nav__item">
                   <a href="#skills" class="nav__link">
                     <i class="ri-trophy-line"></i> Skills
                   </a>
@@ -135,7 +141,9 @@
               <spen class="section__subtitle">My Intro</spen>
 
               <div class="about__container container grid section__border">
-                <img src="assets/img/about.png" alt="" class="about__img">
+                <div class="about__blob grid">
+                  <img src="assets/img/about.png" alt="" class="about__img">
+                </div>
 
                 <div class="about__data">
                   <div class="about__info">
@@ -156,8 +164,8 @@
                   I like to see this as the first step of a much longer journey and I am
                   excited to learn new things and onboard new languages on my way. <br><br>
                   In my professional life, one thing became clear pretty quickly -
-                  I like to <mark>put great attention to detail,</mark> and I feel <mark>satisfiedwhen the
-                  outcome meets my creativity</mark> with also more relationship-drive,
+                  I like to put great attention to detail, and I feel satisfiedwhen the
+                  outcome meets my creativity with also more relationship-drive,
                   human-centered design.
                   In my freetime, I enjoy traveling, cycling, surfing, dancing,
                   and occationally gardening.
@@ -564,7 +572,7 @@
                         </p>
                       </div>
 
-                      <a href="#" class="projects__button">
+                      <a href="#" class="button">
                         View demo <i class="ri-arrow-right-line"></i>
                       </a>
                     </div>
@@ -590,7 +598,7 @@
                         </p>
                       </div>
 
-                      <a href="#" class="projects__button">
+                      <a href="#" class="button">
                         View demo <i class="ri-arrow-right-line"></i>
                       </a>
                     </div>
@@ -607,7 +615,7 @@
                       </div>
 
                       <div>
-                        <span class="testimonial__subtitle">Ruby on Rails, HTML, CSS, JavasScript, Bootstrap, PostgreSQL</span>
+                        <span class="testimonial__subtitle">Ruby on Rails, HTML, CSS, PostgreSQL</span>
                         <br>
                         <br>
                         <p class="testimonial__description">
@@ -616,7 +624,7 @@
                         </p>
                       </div>
 
-                      <a href="#" class="projects__button">
+                      <a href="#" class="button">
                         View demo <i class="ri-arrow-right-line"></i>
                       </a>
                     </div>
@@ -630,9 +638,6 @@
                   </div>
                 </div>
               </div>
-
-
-              <img src="assets/img/shape-wawes.svg" alt="testimonial image" class="testimonial__img">
             </section>
 
             <!--==================== TESTIMONIAL ====================-->
