--- a/index.html
+++ b/index.html
@@ -771,7 +771,7 @@
               </li>
 
               <li>
-                <a href="#projects" class="footer__link">Projects</a>
+                <a href="#testimonial" class="footer__link">Projects</a>
               </li>
             </ul>
             <ul class="footer__social">
