add breakpoints for scree 1200px

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 </li>
 
                 <li class="nav__item">
-                  <a href="#projects" class="nav__link">
+                  <a href="#testimonial" class="nav__link">
                     <i class="ri-image-line"></i> Projects
                   </a>
                 </li>
@@ -95,7 +95,7 @@
               <div class="home__container container grid section__border">
                 <div class="home__data grid">
                   <div class="home__data">
-                    <span class="hone__greeting"><h3>Hello, I'm</h3></span>
+                    <span class="home__greeting"><h3>Hello, I'm</h3></span>
                     <h1 class="home__name">Claire Lin</h1>
                     <h3 class="home__education">Full-Stack Developer <br>
                     Based in Germany</h3>
@@ -160,9 +160,9 @@
                   I like to see this as the first step of a much longer journey and I am
                   excited to learn new things and onboard new languages on my way. <br><br>
                   In my professional life, one thing became clear pretty quickly -
-                  I like to put great attention to detail, and I feel satisfied when the
+                  <strong>I like to put great attention to detail, and I feel satisfied when the
                   outcome meets my creativity with also more relationship-drive,
-                  human-centered design.
+                  human-centered design.</strong>
                   In my freetime, I enjoy traveling, cycling, surfing, dancing,
                   and occationally gardening.
                 </p>
@@ -540,7 +540,7 @@
             </section> -->
 
             <!--==================== NEW PROJECTS ====================-->
-            <section class="testimonial section">
+            <section class="testimonial section" id="testimonial">
               <h2 class="section__title">Projects</h2>
               <span class="section__subtitle">Most Recent Works</span>
 
