modify about sector content

--- a/index.html
+++ b/index.html
@@ -149,22 +149,20 @@
 
                 <div class="about__description about__description__container">
                 <p>
-                  <mark>hi there - let me introduce myself.</mark><br>
-                  <br>I am a Germnay-based junior full stack developer from Taiwan.
-                  After four years of experience in art consulting company as a project
-                  manager, then two years of experience in the blockchain industry as a
-                  crypto-journalist, I decided to change my career to become a web
-                  developer and learned to code in Le Wagon coding bootcamp. <br><br>
-                  I now have a solid understanding of and am fully equipped with
-                  all the tools to build modern and responsive web applications.
-                  I like to see this as the first step of a much longer journey and I am
-                  excited to learn new things and onboard new languages on my way. <br><br>
-                  In my professional life, one thing became clear pretty quickly -
-                  <strong>I like to put great attention to detail, and I feel satisfied when the
-                  outcome meets my creativity with also more relationship-drive,
-                  human-centered design.</strong>
-                  In my freetime, I enjoy traveling, cycling, surfing, dancing,
-                  and occationally gardening.
+                  <mark>hi there - I am a Germany-based junior full-stack developer from Taiwan.</mark><br><br>
+                   After 4 years of work experience in the art industry, I transitioned into the crypto industry,
+                   which led me to join a full-stack web development bootcamp and move to Germany. <br><br>
+
+                   This career change decision is driven by my desire to become an active part of using technology
+                    to help create value for the world we live in. <br><br>
+
+                  In my professional life, I have gained in-depth experience in content marketing and I thoroughly
+                  enjoyed presenting projects in a way that inspires, engages, and drives action. Having worked in
+                  high-stress, cross-functional and cross-culture environments have also made me a strong team-player,
+                  who is empathetic and open to feedback. <br><br>
+
+                  In my free time, I enjoy traveling, cycling in the mountain, surfing in the ocean, and
+                  cuddling with my cats.
                 </p>
               </div>
               <a href="#contact" class="button">Contact Me</a>
