--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                   In my professional life, I have gained in-depth experience in content marketing and I thoroughly
                   enjoyed presenting projects in a way that inspires, engages, and drives action. Having worked in
                   high-stress, cross-functional and cross-culture environments have also made me a strong team-player,
-                  who is empathetic and open to feedback. <br><br>
+                  who is empathetic, collaborative and open to feedback. <br><br>
 
                   In my free time, I enjoy traveling, cycling in the mountain, surfing in the ocean, and
                   cuddling with my cats.
