--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                   </div>
                   <div class="home__blob grid">
                     <div class="home__perfil">
-                      <img src="assets/img/profile.png" alt="home profile photo" class="home__img">
+                      <img src="assets/img/profile.webp" alt="home profile photo" class="home__img">
                     </div>
 
                     <!-- <img src="assets/img/shape-wawes.svg" alt="" class="home__shape-wawes">
@@ -158,8 +158,8 @@
 
                   In my professional life, I have gained in-depth experience in content marketing and I thoroughly
                   enjoyed presenting projects in a way that inspires, engages, and drives action. Having worked in
-                  high-stress, cross-functional and cross-culture environments have also made me a strong team-player,
-                  who is empathetic, collaborative and open to feedback. <br><br>
+                  high-stress, cross-functional and cross-culture environments has also made me a strong team-player,
+                  who is empathetic, collaborative, and open to feedback. <br><br>
 
                   In my free time, I enjoy traveling, cycling in the mountain, surfing in the ocean, and
                   cuddling with my cats.
