--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
               <div class="about__container container grid section__border">
                 <div class="about__blob grid">
                   <div class="about__perfil">
-                    <img src="assets/img/about.png" alt="" class="about__img">
+                    <img src="assets/img/about.webp" alt="" class="about__img">
                   </div>
                 </div>
 
@@ -548,7 +548,7 @@
                     <!--==================== NEW PROJECTS 1====================-->
                     <div class="testimonial__content swiper-slide new__projects_content">
                       <div>
-                        <img src="assets/img/project1.jpg" alt="projects image" class="projects__img">
+                        <img src="assets/img/project1.webp" alt="projects image" class="projects__img">
                       </div>
 
                       <div>
@@ -574,7 +574,7 @@
                     <!--==================== NEW PROJECTS 2 ====================-->
                     <div class="testimonial__content swiper-slide new__projects_content">
                       <div>
-                        <img src="assets/img/project2.jpg" alt="projects image" class="projects__img">
+                        <img src="assets/img/project2.webp" alt="projects image" class="projects__img">
                       </div>
 
                       <div>
@@ -600,7 +600,7 @@
                     <!--==================== NEW PROJECTS 3 ====================-->
                     <div class="testimonial__content swiper-slide new__projects_content">
                       <div>
-                        <img src="assets/img/project3.jpg" alt="projects image" class="projects__img">
+                        <img src="assets/img/project3.webp" alt="projects image" class="projects__img">
                       </div>
 
                       <div>
