--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                   </div>
                   <div class="home__blob grid">
                     <div class="home__perfil">
-                      <img src="assets/img/profile.webp" alt="home profile photo" class="home__img">
+                      <img src="assets/img/profile.png" alt="home profile photo" class="home__img">
                     </div>
 
                     <!-- <img src="assets/img/shape-wawes.svg" alt="" class="home__shape-wawes">
@@ -143,7 +143,7 @@
               <div class="about__container container grid section__border">
                 <div class="about__blob grid">
                   <div class="about__perfil">
-                    <img src="assets/img/about.webp" alt="" class="about__img">
+                    <img src="assets/img/about.png" alt="" class="about__img">
                   </div>
                 </div>
 
@@ -368,7 +368,7 @@
                     <!--==================== NEW PROJECTS 1====================-->
                     <div class="testimonial__content swiper-slide new__projects_content">
                       <div>
-                        <img src="assets/img/project1.webp" alt="projects image" class="projects__img">
+                        <img src="assets/img/project1.jpg" alt="projects image" class="projects__img">
                       </div>
 
                       <div>
@@ -394,7 +394,7 @@
                     <!--==================== NEW PROJECTS 2 ====================-->
                     <div class="testimonial__content swiper-slide new__projects_content">
                       <div>
-                        <img src="assets/img/project2.webp" alt="projects image" class="projects__img">
+                        <img src="assets/img/project2.jpg" alt="projects image" class="projects__img">
                       </div>
 
                       <div>
@@ -420,7 +420,7 @@
                     <!--==================== NEW PROJECTS 3 ====================-->
                     <div class="testimonial__content swiper-slide new__projects_content">
                       <div>
-                        <img src="assets/img/project3.webp" alt="projects image" class="projects__img">
+                        <img src="assets/img/project3.jpg" alt="projects image" class="projects__img">
                       </div>
 
                       <div>
