Change back profil page size

--- a/index.html
+++ b/index.html
@@ -109,13 +109,7 @@
                   </div>
                   <div class="home__blob grid">
                     <div class="home__perfil">
-                      <img src="assets/img/profile.png" alt="home profile photo"
-                      srcset="image-320w.jpg 320w,
-                        image-640w.jpg 640w,
-                        image-1280w.jpg 1280w"
-                      sizes="(max-width: 320px) 280px,
-                        (max-width: 640px) 640px, 1280px"
-                      class="home__img">
+                      <img src="assets/img/profile.png" alt="home profile photo" class="home__img">
                     </div>
                   </div>
 
