Revise contact me button

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                   cuddling with my cats.
                 </p>
               </div>
-              <a href="#contact" class="button">Contact Me</a>
+              <a href="#contact" class="contact__button button button--ghost">Contact Me <i class="ri-arrow-right-line"></i></a>
               </div>
             </section>
 
@@ -525,7 +525,7 @@
                       <span class="contact__data-title">Email <i class='bx bx-mail-send'></i></span>
                       <span class="contact__data-info">chunhuilin7516@gmail.com</span>
 
-                      <a href="mailto:exempleemail@correo.com" target="_blank" class="contact__button button button--ghost">
+                      <a href="mailto:exempleemail@correo.com" target="_blank" class="contact__button button button--ghost email__button">
                         Write me <i class="ri-arrow-right-line"></i>
                       </a>
                     </div>
@@ -533,7 +533,6 @@
                     <div class="contact__data contact__card">
                       <span class="contact__data-title">Whatsapp <i class='bx bxl-whatsapp'></i></span>
                       <span class="contact__data-info">+886 933519863</span>
-                      <!-- Insert a real number plus country code -->
                       <a href="https://api.whatsapp.com/send?phone=886933519863&text=Hello, more information!" target="_blank" class="contact__button button button--ghost">
                         Write me <i class="ri-arrow-right-line"></i>
                       </a>
