--- a/index.html
+++ b/index.html
@@ -386,7 +386,7 @@
                         </p>
                       </div>
 
-                      <a href="http://fusiovan.herokuapp.com/" class="button button--ghost">
+                      <a href="http://fusiovan.herokuapp.com/" class="contact__button button button--ghost">
                         View demo <i class="ri-arrow-right-line"></i>
                       </a>
                     </div>
@@ -412,7 +412,7 @@
                         </p>
                       </div>
 
-                      <a href="http://vanish-882.herokuapp.com/" class="button button--ghost">
+                      <a href="http://vanish-882.herokuapp.com/" class="contact__button button button--ghost">
                         View demo <i class="ri-arrow-right-line"></i>
                       </a>
                     </div>
@@ -439,7 +439,7 @@
                         </p>
                       </div>
 
-                      <a href="mysite-bob1.onrender.com/" class="button button--ghost">
+                      <a href="mysite-bob1.onrender.com/" class="contact__button button button--ghost">
                         View demo <i class="ri-arrow-right-line"></i>
                       </a>
                     </div>
@@ -571,7 +571,6 @@
               </div>
             </section>
         </main>
-
         <!--==================== FOOTER ====================-->
         <footer class="footer">
           <div class="footer__container container">
