Update Fusiovan website link on project section

--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
                         </p>
                       </div>
 
-                      <a href="http://fusiovan.herokuapp.com/" class="contact__button button button--ghost">
+                      <a href="www.fusiovan.com" class="contact__button button button--ghost">
                         View demo <i class="ri-arrow-right-line"></i>
                       </a>
                     </div>
