--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                   </div>
 
                   <div class="home__buttons">
-                    <a download="" href="assets/pdf/Claire-Fullstack Developer-CV.pdf" class="button button--ghost">
+                    <a download="" href="assets/pdf/Claire_Junior Fullstack Developer_CV.pdf" class="button button--ghost">
                       Download CV
                     </a>
                     <a href="#about" class="button">About me</a>
@@ -383,7 +383,7 @@
                         </p>
                       </div>
 
-                      <a href="www.fusiovan.com" class="contact__button button button--ghost">
+                      <a href="https://www.fusiovan.com/" class="contact__button button button--ghost">
                         View demo <i class="ri-arrow-right-line"></i>
                       </a>
                     </div>
