update about section

--- a/index.html
+++ b/index.html
@@ -146,8 +146,8 @@
 
                 <div class="about__description about__description__container">
                 <p>
-                  <mark>hi there - I am a Germany-based junior full-stack developer from Taiwan.</mark><br><br>
-                   After 4 years of work experience in the art industry, I transitioned into the crypto industry,
+                  <mark>hi there - I am a Berlin-based junior full-stack developer from Taiwan.</mark><br><br>
+                   After four years of work experience in the art industry, I transitioned into the crypto industry,
                    which led me to join a full-stack web development bootcamp and move to Germany. <br><br>
 
                    This career change decision is driven by my desire to become an active part of using technology
