--- a/index.html
+++ b/index.html
@@ -322,18 +322,18 @@
                   <div class="qualification__info">
                     <div>
                       <h3 class="qualification__name">
-                        Blockchain Content Editor
+                        Junior Ruby on Rails Full-Stack Developer
                       </h3>
-                       <span class="qualification__country">Kikitrade | Hong Kong (Remote)</span>
-                      <span class="qualification__year">2021 - 2022</span>
+                       <span class="qualification__country">Viridad | Vienna (Remote)</span>
+                      <span class="qualification__year">2023 - Present</span>
                     </div>
 
                     <div>
                       <h3 class="qualification__name">
-                        Blockchain News Editor & Junior Analyst
+                        Blockchain Content Editor
                       </h3>
-                      <span class="qualification__country">Blocktempo | Taipei</span>
-                      <span class="qualification__year">2020 - 2021</span>
+                       <span class="qualification__country">Kikitrade | Hong Kong (Remote)</span>
+                      <span class="qualification__year">2021 - 2022</span>
                     </div>
 
                     <div>
