--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                     <span class="home__greeting"><h3>Hello, I'm</h3></span>
                     <h1 class="home__name">Claire Lin</h1>
                     <h3 class="home__education">Full-Stack Developer <br>
-                    Based in Germany</h3>
+                    Based in Berlin</h3>
                   </div>
 
                   <div class="home__buttons">
