update email and phone number in contact sector

--- a/index.html
+++ b/index.html
@@ -520,7 +520,7 @@
                   <div class="contact__info">
                     <div class="contact__data contact__card">
                       <span class="contact__data-title">Email <i class='bx bx-mail-send'></i></span>
-                      <span class="contact__data-info">chunhuilin7516@gmail.com</span>
+                      <span class="contact__data-info">chlin@riseup.net</span>
 
                       <a href="mailto:exempleemail@correo.com" target="_blank" class="contact__button button button--ghost email__button">
                         Write me <i class="ri-arrow-right-line"></i>
@@ -529,7 +529,7 @@
 
                     <div class="contact__data contact__card">
                       <span class="contact__data-title">Whatsapp <i class='bx bxl-whatsapp'></i></span>
-                      <span class="contact__data-info">+886 933519863</span>
+                      <span class="contact__data-info">+49 15510017595</span>
                       <a href="https://api.whatsapp.com/send?phone=886933519863&text=Hello, more information!" target="_blank" class="contact__button button button--ghost">
                         Write me <i class="ri-arrow-right-line"></i>
                       </a>
