update email href link & change title of Contact sector

--- a/index.html
+++ b/index.html
@@ -522,7 +522,7 @@
                       <span class="contact__data-title">Email <i class='bx bx-mail-send'></i></span>
                       <span class="contact__data-info">chlin@riseup.net</span>
 
-                      <a href="mailto:exempleemail@correo.com" target="_blank" class="contact__button button button--ghost email__button">
+                      <a href="mailto:chlin@riseup.net" target="_blank" class="contact__button button button--ghost email__button">
                         Write me <i class="ri-arrow-right-line"></i>
                       </a>
                     </div>
@@ -539,7 +539,7 @@
 
                 <div class="contact__content">
                   <h3 class="contact__title">
-                    <i class="ri-send-plane-line"></i>Write me your project
+                    <i class="ri-send-plane-line"></i>Let's Connect
                   </h3>
 
                   <form action="" class="contact__form" id="contact-form">
