fix: correct about section image alignment and spacing issue

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                   <div class="home__data">
                     <span class="home__greeting"><h3>Hello, I'm</h3></span>
                     <h1 class="home__name">Claire Lin</h1>
-                    <h3 class="home__education">Full-Stack Developer <br>
+                    <h3 class="home__education">Frontend Developer <br>
                     Based in Berlin</h3>
                   </div>
 
@@ -138,10 +138,8 @@
               <spen class="section__subtitle">My Intro</spen>
 
               <div class="about__container container grid section__border">
-                <div class="about__blob grid">
-                  <div class="about__perfil">
-                    <img src="assets/img/about.png" alt="" class="about__img">
-                  </div>
+                <div class="about__blob">
+                  <img src="assets/img/about.png" alt="" class="about__img">
                 </div>
 
                 <div class="about__description about__description__container">
