Update about section content and css

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
         <!--==================== MAIN ====================-->
         <main class="main">
-            <!--==================== NEW HOME ====================-->
+            <!--==================== HOME ====================-->
             <section class="home section" id="home">
               <div class="home__container container grid section__border">
                 <div class="home__data grid">
@@ -144,17 +144,27 @@
 
                 <div class="about__description about__description__container">
                 <p>
-                  <mark>hi there - I am a Berlin-based junior full-stack developer from Taiwan.</mark><br><br>
-                   After four years of work experience in the art industry, I transitioned into the crypto industry,
-                   which led me to join a full-stack web development bootcamp and move to Germany. <br><br>
+                  <mark>
+                    hi there - I am a Berlin-based frontend developer from Taiwan.
+                  </mark>
+                  <br>
+                  <br>
+                  Before moving into tech, I worked for several years in the art world, an experience that still shapes
+                  how I think about design and usability. I believe that thoughtful design and code
+                  can make a real impact. <br><br>
 
-                   This career change decision is driven by my desire to become an active part of using technology
-                    to help create value for the world we live in. <br><br>
+                  This career change decision is driven by my desire to become an active part of using technology
+                  to help create value for the world we live in. <br><br>
+
+                  Over the past two years, I’ve built web applications with React, Next.js, and Ruby on Rails. Most
+                  recently, I developed a B2B dashboard for a mental health platform and contributed to Distribute Aid,
+                  an open-source project focused on humanitarian aid. <br><br>
 
                   In my professional life, I have gained in-depth experience in content marketing and I thoroughly
-                  enjoyed presenting projects in a way that inspires, engages, and drives action. Having worked in
-                  high-stress, cross-functional and cross-culture environments has also made me a strong team-player,
-                  who is empathetic, collaborative, and open to feedback. <br><br>
+                  enjoyed presenting projects in a way that inspires, engages, and drives action. Working in
+                  cross-functional and cross-culture teams has made me a strong team-player,
+                  who is empathetic, collaborative, and open to feedback.
+                  <br><br>
 
                   In my free time, I enjoy traveling, cycling in the mountain, surfing in the ocean, and
                   cuddling with my cats.
