--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                   </div>
 
                   <div class="home__buttons">
-                    <a download="" href="assets/pdf/Claire-Fullstack Developer-CV.pdf" class="button button--ghost">
+                    <a download="" href="assets/pdf/Claire-Lin-CV.pdf" class="button button--ghost">
                       Download CV
                     </a>
                     <a href="#about" class="button">About me</a>
