Update page title

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 
 
-        <title>Fullstack developer | Claire Lin</title>
+        <title>Frontend Developer | Claire Lin</title>
     </head>
     <body>
         <!--==================== HEADER ====================-->
